# local-chat-on-cpp

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
installer/: config.xml
